--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,4 +1,18 @@
 .content {
-  max-width: 1280px;
+  max-width: 880px;
   margin: 0 auto;
+  padding: 0 19px 0;
 }
+
+@media screen and (min-width: 425px) {
+  .content {
+    padding: 0 28px 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .content {
+    padding: 0;
+  }
+}
+
