--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -6,3 +6,18 @@
   padding: 0;
   margin: 0;
 }
+
+@media screen and (min-width: 768px) {
+  .elements__list {
+    grid-template-columns: 1fr 1fr;
+    column-gap: 17px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .elements__list {
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 17px;
+    row-gap: 20px;
+  }
+}
