--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,5 +4,11 @@
   line-height: 17px;
   color: #545454;
   margin: 0;
-  padding: 48px 19px 36px;
+}
+
+@media screen and (min-width: 425px) {
+  .footer__copyright {
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
