--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,4 +2,13 @@
   min-height: 98px;
   padding: 0;
   margin: 0 auto;
+  max-width: 880px;
+  padding: 48px 19px 36px;
+  box-sizing: border-box;
+}
+
+@media screen and (min-width: 1024px) {
+  .footer {
+    padding: 67px 0 60px;
+  }
 }
