--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,6 +4,7 @@
   font-style: normal;
   font-weight: normal;
   background: #000000;
+  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
