--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -5,3 +5,10 @@
   overflow: hidden;
   margin: 0 auto 26px;
 }
+
+
+@media screen and (min-width: 768px) {
+  .profile__avatar {
+    margin: 0;
+  }
+}
