--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -8,3 +8,10 @@
   width: 18px;
   height: 18px;
 }
+
+@media screen and (min-width: 768px) {
+  .profile__edit {
+    width: 24px;
+    height: 24px;
+  }
+}
