--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,6 +1,14 @@
 .profile__info {
   display: flex;
+  flex-direction: column;
   align-items: center;
   color: #FFFFFF;
-  margin: 0 0 16px;
+  margin: 0 0 33px;
+}
+
+@media screen and (min-width: 768px) {
+  .profile__info {
+    align-items: flex-start;
+    margin: 0;
+  }
 }
