--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -2,6 +2,13 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
-  margin: 0 0 36px;
+  margin: 0;
   color: #FFFFFF;
+}
+
+@media screen and (min-width: 768px) {
+  .profile__subtitle {
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
