--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -5,3 +5,11 @@
   margin: 0 10px 0 0;
   padding: 0;
 }
+
+@media screen and (min-width: 768px) {
+  .profile__title {
+    font-size: 42px;
+    line-height: 48px;
+    margin: 0 18px 0 0;
+  }
+}
