--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,7 +1,17 @@
 .profile {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
   box-sizing: border-box;
-  padding: 42px 19px 36px;
+  padding: 42px 0 36px;
+}
+
+@media screen and (min-width: 768px) {
+  .profile {
+    grid-template-columns: auto 1fr auto;
+    justify-items: start;
+    align-items: center;
+    gap: 30px;
+    padding: 42px 0 50px;
+  }
 }
