--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,6 +1,12 @@
 .element__like {
+  background-image: url(../../../images/like-img.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 20px;
+  height: 18px;
   border: none;
   background-color: transparent;
+  align-self: center;
   padding: 0;
   margin: 0;
 }
