--- a/blocks/form/__close-btn/form__close-btn.css
+++ b/blocks/form/__close-btn/form__close-btn.css
@@ -5,6 +5,13 @@
   width: 26px;
   height: 26px;
   border: none;
-  right: 11px;
+  right: 5px;
   top: -46px;
+}
+
+@media screen and (min-width: 768px) {
+  .form__close-btn {
+    right: -26px;
+    top: -41px;
+  }
 }
