--- a/blocks/form/__close-icon/form__close-icon.css
+++ b/blocks/form/__close-icon/form__close-icon.css
@@ -3,3 +3,10 @@
   width: 26px;
   height: 26px;
 }
+
+@media screen and (min-width: 768px) {
+  .form__close-icon {
+    width: 40px;
+    height: 40px;
+  }
+}
