--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -7,7 +7,8 @@
   font-size: 14px;
   font-family: inherit;
   line-height: 17px;
-  margin: 0 0 37px;
+  margin: 0 0 29px;
+  padding-bottom: 9px;
 }
 
 .form__item:nth-of-type(2) {
