--- a/blocks/form/__submit-text/form__submit-text.css
+++ b/blocks/form/__submit-text/form__submit-text.css
@@ -5,3 +5,10 @@
   text-align: center;
   color: #FFFFFF;
 }
+
+@media screen and (min-width: 768px) {
+  .form__submit-text {
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
