--- a/blocks/form/__submit/form__submit.css
+++ b/blocks/form/__submit/form__submit.css
@@ -6,3 +6,13 @@
   box-sizing: border-box;
   margin: 45px 0 0;
 }
+
+.form__submit:hover {
+  opacity: 0.8;
+}
+
+@media screen and (min-width: 768px) {
+  .form__submit {
+    height: 50px;
+  }
+}
