--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,8 @@
 
 @import url(../blocks/content/content.css);
 
+@import url(../blocks/button/button.css);
+
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
@@ -26,6 +28,7 @@
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__img/element__img.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/_type/element__like_type_active.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -39,4 +42,4 @@
 @import url(../blocks/form/__submit-text/form__submit-text.css);
 @import url(../blocks/form/__close-btn/form__close-btn.css);
 @import url(../blocks/form/__close-icon/form__close-icon.css);
-@import url(../blocks/form/__container/form__container.css);
+@import url(../blocks/form/__popup/form__popup.css);
