--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -4,11 +4,13 @@
   line-height: 17px;
   margin: 0;
   color: #FFFFFF;
+  max-width: 200px;
 }
 
 @media screen and (min-width: 768px) {
   .profile__subtitle {
     font-size: 18px;
     line-height: 22px;
+    max-width: 500px;
   }
 }
