--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -4,6 +4,7 @@
   line-height: 33px;
   margin: 0 10px 0 0;
   padding: 0;
+  max-width: 200px;
 }
 
 @media screen and (min-width: 768px) {
@@ -11,5 +12,6 @@
     font-size: 42px;
     line-height: 48px;
     margin: 0 18px 0 0;
+    max-width: 500px;
   }
 }
