--- a/pages/index.css
+++ b/pages/index.css
@@ -20,6 +20,8 @@
 @import url(../blocks/profile/__img/profile__img.css);
 @import url(../blocks/profile/__add/profile__add.css);
 @import url(../blocks/profile/__edit/profile__edit.css);
+@import url(../blocks/profile/__edit-img/profile__edit-img.css);
+@import url(../blocks/profile/__add-img/profile__add-img.css);
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/__list/elements__list.css);
