--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -7,11 +7,11 @@
   font-size: 14px;
   font-family: inherit;
   line-height: 17px;
-  margin: 0 0 29px;
+  margin: 29px 0 0;
   padding-bottom: 9px;
 }
 
-.form__item:nth-of-type(2) {
+.form__item:first-of-type {
   margin: 0;
 }
 
