--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,4 @@
-.form__popup {
+.popup__container {
   display: flex;
   position: relative;
   flex-direction: column;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .form__popup {
+  .popup__container {
     max-width: 430px;
     min-height: 330px;
     padding: 34px 36px 37px;
