--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -1,4 +1,8 @@
 .profile__add {
+  background-image: url(../../../images/button-plus.svg);
+  background-repeat: no-repeat;
+  background-size: 16px;
+  background-position: center;
   background-color: transparent;
   border: 2px solid #FFFFFF;
   box-sizing: border-box;
@@ -10,5 +14,6 @@
 @media screen and (min-width: 768px) {
   .profile__add {
     width: 150px;
+    background-size: 22px;
   }
 }
