--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,5 +1,9 @@
 .profile__edit {
   display: flex;
+  background-image: url(../../../images/button-edit.svg);
+  background-size: 8px;
+  background-repeat: no-repeat;
+  background-position: center;
   justify-content: center;
   align-items: center;
   background-color: transparent;
@@ -7,10 +11,12 @@
   box-sizing: border-box;
   width: 18px;
   height: 18px;
+  padding: 0;
 }
 
 @media screen and (min-width: 768px) {
   .profile__edit {
+    background-size: 10px;
     width: 24px;
     height: 24px;
   }
