--- a/pages/index.css
+++ b/pages/index.css
@@ -20,7 +20,6 @@
 @import url(../blocks/profile/__img/profile__img.css);
 @import url(../blocks/profile/__add/profile__add.css);
 @import url(../blocks/profile/__edit/profile__edit.css);
-@import url(../blocks/profile/__edit-img/profile__edit-img.css);
 @import url(../blocks/profile/__add-img/profile__add-img.css);
 
 @import url(../blocks/elements/elements.css);
@@ -35,13 +34,13 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_display/popup_display_active.css);
+@import url(../blocks/popup/__heading/popup__heading.css);
+@import url(../blocks/popup/__close-btn/popup__close-btn.css);
+@import url(../blocks/popup/__container/popup__container.css);
+
 @import url(../blocks/form/form.css);
-@import url(../blocks/form/_display/form_display_active.css);
-@import url(../blocks/form/__heading/form__heading.css);
 @import url(../blocks/form/__input-container/form__input-container.css);
 @import url(../blocks/form/__item/form__item.css);
 @import url(../blocks/form/__submit/form__submit.css);
-@import url(../blocks/form/__submit-text/form__submit-text.css);
-@import url(../blocks/form/__close-btn/form__close-btn.css);
-@import url(../blocks/form/__close-icon/form__close-icon.css);
-@import url(../blocks/form/__popup/form__popup.css);
