--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -12,5 +12,5 @@
 }
 
 .element__like:active {
-  background-image: url(../../../images/like-active.svg)
+  background-image: url(../../../images/like-active.svg);
 }
