--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-  display: none;
+  display: flex;
   justify-content: center;
   flex-direction: column;
   position: fixed;
@@ -11,4 +11,7 @@
   bottom: 0;
   left: 0;
   padding: 0 19px 0;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s linear;
 }
