--- a/blocks/form/__input-container/form__input-container.css
+++ b/blocks/form/__input-container/form__input-container.css
@@ -1,4 +1,7 @@
 .form__input-container {
+  display: flex;
+  flex-direction: column;
+  min-width: 358px;
   margin: 0;
   padding: 0;
   border: 0;
