--- a/blocks/form/__submit/form__submit.css
+++ b/blocks/form/__submit/form__submit.css
@@ -4,7 +4,7 @@
   background: #000000;
   border-radius: 2px;
   box-sizing: border-box;
-  margin: 45px 0 0;
+  margin: 8px 0 0;
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
@@ -12,7 +12,7 @@
   color: #FFFFFF;
 }
 
-.form__submit:hover {
+.form__submit:hover:enabled {
   opacity: 0.8;
 }
 
