--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-  min-height: 100vw;
+  min-height: 100vh;
   min-width: 320px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
