--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,11 +1,12 @@
 .profile__avatar {
+  display: flex;
+  justify-content: center;
   width: 120px;
   height: 120px;
   border-radius: 50%;
   overflow: hidden;
   margin: 0 auto 26px;
 }
-
 
 @media screen and (min-width: 768px) {
   .profile__avatar {
