--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -27,8 +27,10 @@
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__img/element__img.css);
+@import url(../blocks/element/__like-block/element__like-block.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
+@import url(../blocks/element/__like-number/element__like-number.css);
 @import url(../blocks/element/__delete/element__delete.css);
 
 @import url(../blocks/footer/footer.css);
