--- a/src/blocks/form/__submit/form__submit.css
+++ b/src/blocks/form/__submit/form__submit.css
@@ -4,7 +4,7 @@
   background: #000000;
   border-radius: 2px;
   box-sizing: border-box;
-  margin: 8px 0 0;
+  margin: 0;
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
