--- a/src/blocks/popup/__heading/popup__heading.css
+++ b/src/blocks/popup/__heading/popup__heading.css
@@ -3,7 +3,7 @@
   font-size: 18px;
   line-height: 22px;
   color: #000000;
-  margin: 0;
+  margin: 0 0 38px;
 }
 
 @media screen and (min-width: 768px) {
